[package]
name = "sailii"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
data-encoding = "2"
urlencoding = "2"
bs58 = "0.5"
base91 = "0.1"
rayon = "1"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
dirs = "6"
log = "0.4"
env_logger = "0.11"
regex = "1"
once_cell = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
